<resources>
    <string name="app_name">MyDemoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_name">Kevin La</string>
    <string name="email">chenchiaho@gmail.com</string>
    <string name="link_field">Linkedin:</string>
    <string name="email_field">Email:</string>
    <string name="my_link">www.linkedin.com/in/chenchiaho</string>
    <string name="mood_field">Current Mood:</string>
    <string name="button_mood">Get Mood!</string>
    <string name="enter">Enter</string>
    <string name="weather_status">Weather status</string>
    <string name="city">City</string>
    <string name="condition">Condition</string>
    <string name="temp">--.--°C</string>
    <string name="humidity">Humidity: —%</string>
    <string name="visibility">Visibility: —km</string>
    <string name="date">---- -- --</string>
    <string name="time">--:--</string>
    <string name="overview">Overview</string>
    <string name="weather">Weather</string>
    <string name="forecast">Hours</string>
    <string name="title_detail">Forecast Details</string>
    <string name="title_overview">Overview</string>
    <string name="title_future">Forecast List</string>
    <string name="title_current">Current Weather</string>
    <string name="could_not_load">Could not load data</string>
    <string name="overviewText">Hello friend!
        \n\nThis is Kevin, I am a developer who\'s always excited to learn all about Android developing.
        \n\nIt is always exciting for me to see how codes and functions being put together and working properly.
        \n\nI have been dedicating in learning all about the exciting world of programming and only wish I could start much earlier.
        \n\nThis application is put together using fundamental techniques and methods in Android developing such as RecyclerView, Retrofit, Room Database, and Data-Binding.
        \n\nAside from my current full-time job, I try the best I can to move my coding skills up to another level one step at a time.
        \n\nI appreciate your viewing and really look forward to an opportunity to dive into the world of Android developing and commit myself to it as a full time passion!</string>
    <string name="generate">Generate</string>
    <string name="leave_an_impression">Leave an impression!</string>
    <string name="mood1">(͡° ͜ʖ ͡°)</string>
    <string name="mood2"><![CDATA[(>‿◠)✌]]></string>
    <string name="mood3">(っ＾▿＾)۶🍸🌟🍺٩(˘◡˘ )</string>
    <string name="mood4">😭</string>
    <string name="mood5">💪 (•︡益︠•) 👊</string>
    <string name="impression1">Awesome</string>
    <string name="impression2">Nice</string>
    <string name="impression3">Marginally favorable</string>
    <string name="impression4">Could do better</string>
    <string name="impression5">Keep on working!</string>
    <string name="impression6">👍</string>
    <string name="no_mood">No mood found</string>
    <string name="no_impression">No impression found</string>


</resources>