<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weatherDetail"
            type="com.example.android.mydemoapp.api.future.FutureWeatherParcel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/future_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.weather.future.DetailFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/detail_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/merriweatherregular"
            android:text="@string/city"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="City" />

        <TextView
            android:id="@+id/detail_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweatherregular"
            android:text="@string/condition"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/detail_time"
            app:layout_constraintTop_toBottomOf="@+id/detail_time"
            tools:text="Condition" />

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/detail_city"
            app:layout_constraintTop_toBottomOf="@+id/detail_city" />

        <TextView
            android:id="@+id/detail_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/detail_date"
            app:layout_constraintTop_toBottomOf="@+id/detail_date" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:elevation="10dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_condition"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:id="@+id/detail_icon"

                android:layout_width="145dp"
                android:layout_height="145dp"
                android:background="#A68E75"
                android:contentDescription="@string/weather_status" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/detail_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/merriweatherregular"
            android:text="@string/temp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/card_view"
            app:layout_constraintStart_toEndOf="@+id/card_view"
            app:layout_constraintTop_toTopOf="@+id/card_view"
            tools:text="@string/temp" />

        <TextView
            android:id="@+id/detail_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/detail_temperature"
            app:layout_constraintTop_toBottomOf="@+id/detail_temperature"
            tools:text="@string/temp" />


        <TextView
            android:id="@+id/detail_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/temp"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="16sp"
            android:textColor="#70604F"
            app:layout_constraintStart_toEndOf="@+id/detail_max_temp"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            tools:text="@string/temp" />

        <TextView
            android:id="@+id/detail_max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/temp"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="16sp"
            android:textColor="#70604F"
            app:layout_constraintStart_toStartOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            tools:text="@string/temp" />

        <TextView
            android:id="@+id/detail_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/humidity"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="18sp"
            android:textColor="#70604F"
            app:layout_constraintStart_toStartOf="@+id/detail_max_temp"
            app:layout_constraintTop_toBottomOf="@+id/detail_max_temp"
            tools:text="@string/humidity" />


        <TextView
            android:id="@+id/detail_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/visibility"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="18sp"
            android:textColor="#70604F"
            app:layout_constraintStart_toStartOf="@+id/detail_humidity"
            app:layout_constraintTop_toBottomOf="@+id/detail_humidity"
            tools:text="@string/visibility" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
