<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="future"
            type="com.example.android.mydemoapp.api.future.FutureWeatherParcel" />

        <variable
            name="clickListener"
            type="com.example.android.mydemoapp.ui.weather.future.OnClickListener" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#F9F4ED"
        app:cardCornerRadius="8dp"
        android:minHeight="80dp"
        android:onClick="@{() -> clickListener.onClick(future)}"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="10dp"
                app:cardCornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/item_icon"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="#A68E75"
                    android:contentDescription="@string/weather_status" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/item_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/merriweatherregular"
                android:text="@string/temp"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/card_view"
                app:layout_constraintTop_toTopOf="@+id/card_view"
                tools:text="Max: 27.0" />

            <TextView
                android:id="@+id/item_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/merriweatherregular"
                android:text="@string/temp"
                android:textSize="13sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/item_max_temp"
                app:layout_constraintStart_toEndOf="@+id/item_max_temp"
                tools:text="Min: 27.0" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweatherregular"
                android:text="@string/condition"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/item_max_temp"
                app:layout_constraintTop_toBottomOf="@+id/item_max_temp"
                tools:text="Cloudy" />

            <TextView
                android:id="@+id/item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/merriweatherregular"
                android:text="@string/date"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/item_min_temp"
                tools:text="2021-07-18" />

            <TextView
                android:id="@+id/item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/merriweatherregular"
                android:text="@string/time"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/item_date"
                app:layout_constraintTop_toBottomOf="@+id/item_date"
                tools:text="00:00" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>