<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="current"
            type="com.example.android.mydemoapp.ui.weather.current.CurrentWeatherViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/current_weather_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.weather.current.CurrentWeatherFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/merriweatherregular"
            android:text="@string/city"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="18sp"
            android:text="@string/condition"
            app:layout_constraintStart_toStartOf="@+id/textView_city"
            app:layout_constraintTop_toBottomOf="@+id/textView_city"
            tools:text="@string/condition" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:elevation="10dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_condition"
            app:layout_constraintWidth_percent="0.4">

            <ImageView
                android:id="@+id/imageView_condition_icon"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:background="#A68E75"
                android:contentDescription="@string/weather_status" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="30sp"
            android:text="@string/temp"
            app:layout_constraintBottom_toBottomOf="@+id/card_view"
            app:layout_constraintStart_toEndOf="@+id/card_view"
            app:layout_constraintTop_toTopOf="@+id/card_view"
            tools:text="@string/temp" />

        <TextView
            android:id="@+id/textView_feels_like_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="12sp"
            android:text="@string/temp"
            app:layout_constraintStart_toStartOf="@+id/textView_temperature"
            app:layout_constraintTop_toBottomOf="@+id/textView_temperature"
            tools:text="@string/temp" />

        <TextView
            android:id="@+id/textView_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="16sp"
            android:textColor="#70604F"
            android:text="@string/temp"
            app:layout_constraintStart_toEndOf="@+id/textView_max_temp"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            tools:text="@string/temp" />

        <TextView
            android:id="@+id/textView_max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="16sp"
            android:textColor="#70604F"
            android:text="@string/temp"
            app:layout_constraintStart_toStartOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            tools:text="@string/temp" />

        <TextView
            android:id="@+id/textView_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="18sp"
            android:textColor="#70604F"
            android:text="@string/humidity"
            app:layout_constraintStart_toStartOf="@+id/textView_max_temp"
            app:layout_constraintTop_toBottomOf="@+id/textView_max_temp"
            tools:text="@string/humidity" />

        <TextView
            android:id="@+id/textView_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/merriweatherregular"
            android:textSize="18sp"
            android:textColor="#70604F"
            android:text="@string/visibility"
            app:layout_constraintStart_toStartOf="@+id/textView_humidity"
            app:layout_constraintTop_toBottomOf="@+id/textView_humidity"
            tools:text="@string/visibility" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
